[-] removed russian comments